- Initial (internal) analytics abstraction.
- Turned on reprocessing by default
- Added basics for Data Forwarding integrations.
- The threads interface now contributes to grouping if it contains a single thread.
- Added per-key (DSN) rate limits (``project:rate-limits`` feature).
- Added tsdb statistics for events per-key.
- Added basic workspace for Visual Studio Code.

Schema Changes
~~~~~~~~~~~~~~

- Dropped ``GroupTagValue.group_id`` foreign key constraint
- Dropped ``GroupTagValue.project_id`` foreign key constraint
- Added ``Deploy.notified`` column
- Added index on ``EventTag.date_added``
- Added unique index on ``Environment(organization_id, name)``
- Added unique index on ``ReleaseEnvironment(organization_id, release_id, environment_id)``
- Added ``EventUser.name`` column
- Added ``UserReport.event_user_id`` column

Version 8.16.1
--------------

- Fixed issue in migration 0302 that prevented upgrading

Version 8.16
------------

- Added data migration to create UserEmail objects for users whose primary emails did not have them
- Time series data (used by graphs and other features) is now updated when groups are merged.
- Added distributions to the release system to better support mobile apps
- Update activity entries to reference issues by their short ID.
- Added user notifications settings for deploy emails.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Distribution`` model
- Added ``ReleaseFile.dist`` column
- Added ``UserOption.organization`` column
- Added ``CommitAuthor.external_id`` column

API Changes
~~~~~~~~~~~

- Deprecate `dateStarted` in releases endpoints

Version 8.15
------------

- Added overview for a release to view a breakdown of files changes, commit authors, new issues, and issues resolved
- Refactor usage of ``sentry.app`` to use individual modules.
- Implemented ``--concurrency`` on ``sentry cleanup``
- Added support for the new symbol server system to support native SDKs better.
- Added deploy email